arc-script/tests/unit/src/snapshots/dfg@ownership.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_fail/ownership.arc

---
[-- Found 1 errors --],
error: Double use of value of non-copyable type ~i32
  ┌─ <FILE-NAME>
  │
2 │     (s0, s0)
  │      ^^  ^^


